Ajout de l'icone

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,4 @@ body main ul {
 }
 body main ul li {
   display: inline-block;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
